# TreeMake

./: CMakeLists.txt  README.md  imgui.ini
.github/workflows/: build.yml
resources/: icon.rc  icon.rc.in
scripts/: generate_icons.py
src/: icon_data.h  main.cpp
